tests/snapshots/corpus__ast@020.kdl.snap
---
source: tests/corpus.rs
expression: "node /-{} \"val\"\n"
---
Document {
    nodes: [
        Node {
            span: 0..16,
            ty: None,
            name: "node":0..4,
            attrs: [
                Attr {
                    span: 10..15,
                    name: None,
                    ty: None,
                    value: "val":10..15,
                },
            ],
            children: [],
        },
    ],
}
