tests/snapshots/corpus__ast@021.kdl.snap
---
source: tests/corpus.rs
expression: "node /- /- {} {} \"val\"\n"
---
Document {
    nodes: [
        Node {
            span: 0..23,
            name: "node",
            ty: None,
            attrs: [
                Attribute {
                    span: 17..22,
                    name: None,
                    ty: None,
                    value: String(
                        "val",
                    ),
                },
            ],
            children: None,
        },
    ],
    ..
}
