tests/snapshots/corpus__diagnostic@018.kdl.snap
---
source: tests/corpus.rs
expression: "1\n"
---
kdl::parse::bare_value

  × values are not allowed without a containing node
   ╭────
 1 │ 1
   · ─
   ╰────
  help: add a node to contain this value

