tests/snapshots/corpus__diagnostic@error_bare_value.kdl.snap
---
source: tests/corpus.rs
expression: "97\n"
---

  × errors occured while parsing

Error: kdl::bare_value (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.BareValue)

  × values are not allowed without a containing node
   ╭────
 1 │ 97
   · ──
   ╰────
  help: put the value inside a node

