tests/snapshots/corpus__diagnostic@error_escaped_eof.kdl.snap
---
source: tests/corpus.rs
expression: "node \\ // no newline at end of file"
---

  × errors occured while parsing

Error: kdl::escaped_eof (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.EscapedEof)

  × line continuations cannot be used at the end of a file
   ╭────
 1 │ node \ // no newline at end of file
   ·      ─
   ╰────
  help: remove the line continuation

