tests/snapshots/corpus__diagnostic@error_missing_value.kdl.snap
---
source: tests/corpus.rs
expression: "node prop=\n"
---

  × errors occured while parsing

Error: kdl::missing_value (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.MissingValue)

  × property does not have a value
   ╭────
 1 │ node prop=
   ·          ─
   ╰────
  help: add a value

